; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/cpu/cyclone/Disa/extr_Disa.c_DisaBtstImm.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/cpu/cyclone/Disa/extr_Disa.c_DisaBtstImm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"btst\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"bchg\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"bclr\00", align 1
@.str.3 = private unnamed_addr constant [5 x i8] c"bset\00", align 1
@__const.DisaBtstImm.opcode = private unnamed_addr constant [4 x i8*] [i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i32 0, i32 0)], align 16
@DisaText = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [10 x i8] c"%s %s, %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @DisaBtstImm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @DisaBtstImm(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca [64 x i8], align 16
  %5 = alloca [64 x i8], align 16
  %6 = alloca [4 x i8*], align 16
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  %7 = bitcast [64 x i8]* %4 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 16 %7, i8 0, i64 64, i1 false)
  %8 = bitcast [64 x i8]* %5 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 16 %8, i8 0, i64 64, i1 false)
  %9 = bitcast [4 x i8*]* %6 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %9, i8* align 16 bitcast ([4 x i8*]* @__const.DisaBtstImm.opcode to i8*), i64 32, i1 false)
  %10 = load i32, i32* %2, align 4
  %11 = ashr i32 %10, 6
  %12 = and i32 %11, 3
  store i32 %12, i32* %3, align 4
  %13 = getelementptr inbounds [64 x i8], [64 x i8]* %4, i64 0, i64 0
  %14 = call i32 @DisaGetEa(i8* %13, i32 60, i32 0)
  %15 = getelementptr inbounds [64 x i8], [64 x i8]* %5, i64 0, i64 0
  %16 = load i32, i32* %2, align 4
  %17 = and i32 %16, 63
  %18 = call i32 @DisaGetEa(i8* %15, i32 %17, i32 0)
  %19 = load i32, i32* @DisaText, align 4
  %20 = load i32, i32* %3, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds [4 x i8*], [4 x i8*]* %6, i64 0, i64 %21
  %23 = load i8*, i8** %22, align 8
  %24 = getelementptr inbounds [64 x i8], [64 x i8]* %4, i64 0, i64 0
  %25 = getelementptr inbounds [64 x i8], [64 x i8]* %5, i64 0, i64 0
  %26 = call i32 @sprintf(i32 %19, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.4, i64 0, i64 0), i8* %23, i8* %24, i8* %25)
  ret i32 0
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @DisaGetEa(i8*, i32, i32) #2

declare dso_local i32 @sprintf(i32, i8*, i8*, i8*, i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
